crates/ars-i18n/tests/ui/translate_bad_placeholder.rs
use ars_i18n::Translate;

#[derive(Translate)]
#[translate(fallback = "en")]
enum Text {
    #[translate(en = "{count} items")]
    Count { total: usize },
}

fn main() {}
